FINISH GAMEPLAY, NOW WORKING ON 5 SCORE MAXIMUM

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="./css/detail.css">
     <link rel="stylesheet" href="./css/general.css">
 
@@ -26,9 +30,11 @@
     <div id="hands">
         <img src="./assets/arm-ai.png" alt="ARM AI" class="arm-robot">
         <img src="./assets/rock-ai.png" alt="HAND AI" class="palm-robot">
+        <img src="" alt="" class="robot-gameplay" id="robot-gameplay-anim">
 
         <img src="./assets/arm-human.png" alt="ARM HUMAN" class="arm-human">
         <img src="./assets/rock-human.png" alt="HAND HUMAn" class="palm-human">
+        <img src="" alt="" class="human-gameplay" id="human-gameplay-anim">
     </div>
 
     <div class="container">
@@ -63,11 +69,16 @@
                 </div>
             </button>
         </div>
+
+        <div id="result">
+            <h2></h2>
+            <button id="continue">CONTINUE</button>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="./scripts/hands_gsap.js"></script>
-
-    <script src="main.js"></script>
+    <script src="./scripts/main.js"></script>
+    <script src="./scripts/game.js"></script>
 </body>
 </html>
