--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
         <div id="result">
             <h2></h2>
             <button id="continue">CONTINUE</button>
+            <button id="restart">RESTART</button>
         </div>
     </div>
 
